fixing z-index of mockup image

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ p {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 /* Navigation Bar */
@@ -64,14 +64,22 @@ p {
 
 /* Title-Image */
 
+.img-container {
+    position: relative;
+}
+
 .Title-Image {
-    margin: auto;
     width: 60%;
+    right: 25%;
     transform: rotate(25deg);
+    position: absolute;
 }
 
 #features {
     padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
+    z-index: 1;
 }
 
 .features-box {
